# aqualungs

./: .gitignore  LICENSE  README.md  pyproject.toml
aqualungs/: config.yaml  download.py  extract.py  main.py  models.py
aqualungs/db/: create_table_articles.sql  insert_articles.sql
aqualungs/prompt/: __init__.py
